CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (PROJECT_NAME tol)
SET (PROJECT_VERS 0.1)

PROJECT (${PROJECT_NAME})

STRING (TIMESTAMP PROJECT_TIME "%Y-%m-%d")

CONFIGURE_FILE (
    ${CMAKE_CURRENT_SOURCE_DIR}/tolConfig.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/tolConfig.h
)

SET (CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE (TCL REQUIRED)
INCLUDE_DIRECTORIES (${TCL_INCLUDE_PATH})
ADD_EXECUTABLE (tol tol.c)
TARGET_LINK_LIBRARIES (tol ${TCL_LIBRARY})
