CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (PROJECT_NAME tol)
SET (PROJECT_VERS 0.1)

PROJECT (${PROJECT_NAME})

FIND_PACKAGE (TCL REQUIRED)
INCLUDE_DIRECTORIES (${TCL_INCLUDE_PATH})

STRING (TIMESTAMP PROJECT_TIME "%Y-%m-%d")
CONFIGURE_FILE (
    ${CMAKE_CURRENT_SOURCE_DIR}/tolConfig.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/tolConfig.h
)

SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
FIND_PACKAGE (CXXFeatures)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_COMPILER_FLAGS}")

SET (CMAKE_INCLUDE_CURRENT_DIR ON)

SET (SRC tol.cpp help.cpp main.cpp)
SET (EXE tol)
ADD_EXECUTABLE (${EXE} ${SRC})
TARGET_LINK_LIBRARIES (${EXE} ${TCL_LIBRARY})
INSTALL (TARGETS ${EXE} DESTINATION bin)
